Sonar pass